# swin-transformer-processor

./: .gitignore  CMakeLists.txt  README.md  compile_flags.txt  covert.py  downloader.py  env.sh  main.cpp  main.h  main_tb.cpp  parser.cpp  run.tcl
compiler/: .gitignore  CMakeLists.txt  main.cpp
compiler/include/: ModelNode.h  ModelTree.h  cell.h  cell_vector.h  instruction.h  model_node.h  model_tree.h
compiler/src/: ModelNode.cpp  model_node.cpp  model_tree.cpp
cpu/: .gitignore  CMakeLists.txt  main  main.cpp
cpu/data/: config-sample.yaml  config.yaml  layer1.txt
cpu/include/: config.h  controller.h  data_selection_and_arrangement.h  functions.h  linear.h  matrix_multiply.h  partition_merge.h  residual_attention.h  residual_feed_forward.h
cpu/src/: main.cpp
cpu/tool/: creator.cpp
cpu/tools/: generate.cpp  generate_img.cpp
docs/: design.md
hls/: config.h  controller.h  controller.hpp  data_selection_and_arrangement.h  data_selection_and_arrangement.hpp  experiments.md  functions.h  functions.hpp  linear.h  linear.hpp  main.cpp  main.h  main.hpp  main_tb.cpp  matrix_multiply.h  matrix_multiply.hpp  partition_merge.h  partition_merge.hpp  residual_attention.h  residual_attention.hpp  residual_feed_forward.h  residual_feed_forward.hpp
hls_no_params/: .gitignore  config.h  data_selection_and_arrangement.h  functions.h  main.cpp  matrix_multiply.h  partition_merge.h  residual_attention.h  residual_feed_forward.h  run_hls.tcl
project/: data_selection.h  gelu.h  partition_merge.h  softmax.h  swin_block.h  vector.h
src/: ModelNode.cpp  ModelTree.cpp
(+24 files in other folders)
